# mate-power-manager

./: .build.yml  .travis.yml  AUTHORS  CNAME  ChangeLog  Makefile.am  NEWS  NEWS.GNOME  README  autogen.sh  configure.ac  index.html  makepot  mate-doc-utils.make  mate-power-manager.pot  meson.build  meson_options.txt  meson_post_install.sh  update-authors.pl
.tx/: config  config_20221028214813.bak
2021-01-16-133938-5257-1@3bda01153dec_master/: index.html  report-1dc9a7.html  report-410042.html  report-495830.html  report-4ab8bf.html  report-b4dff1.html
2021-01-16-134052-3390-cppcheck@3bda01153dec_master/: 0.html  16.html  18.html  2.html  8.html
2021-01-28-145841-5206-1@11d02f3ccdb8_PACKAGE_URL/: index.html  report-0a1953.html  report-126afe.html  report-d65294.html  report-f057b2.html  report-fd3d66.html
2021-01-28-145955-6975-cppcheck@11d02f3ccdb8_PACKAGE_URL/: 1.html  17.html
2021-02-03-130239-5219-1@063750fe5b60_applet-menu-ui-files/: index.html  report-268666.html  report-726821.html  report-9d0b98.html  report-dcc60b.html  report-fdc9a4.html
2021-02-03-130357-2063-cppcheck@063750fe5b60_applet-menu-ui-files/: 0.html  13.html  15.html  21.html  3.html
2021-02-04-224829-5213-1@84de28686a20_master/: index.html  report-25a6e5.html  report-2d3e11.html  report-6addde.html  report-6fe587.html  report-7bfa27.html
2021-02-04-224950-4119-cppcheck@84de28686a20_master/: 0.html  11.html  14.html  4.html  5.html  6.html
2021-02-22-230349-5202-1@21f2416d93ab_master/: index.html  report-8081ad.html  report-a4fe87.html  (+3 more)
applets/brightness/: Makefile.am  brightness-applet.c  config.h.in  gpm-common.c  gpm-common.h  meson.build  org.mate.BrightnessApplet.mate-panel-applet.desktop.in.in  org.mate.BrightnessApplet.mate-panel-applet.desktop.in.in.txt  org.mate.BrightnessApplet.mate-panel-applet.in.in  org.mate.panel.applet.BrightnessAppletFactory.service.in
applets/power-profiles/: Makefile.am  gpm-common.c  gpm-common.h  meson.build  org.mate.PowerProfilesApplet.mate-panel-applet.desktop.in.in  org.mate.panel.applet.PowerProfilesAppletFactory.service.in  power-profiles-applet-menu.xml  power-profiles-applet.c
data/: Makefile.am  acme.ui  gpm-prefs-deprecated.ui  gpm-prefs.ui  gpm-statistics-deprecated.ui  gpm-statistics-fix.ui  gpm-statistics.ui  mate-power-backlight-helper.1  mate-power-manager.1  mate-power-manager.about  mate-power-manager.convert  mate-power-manager.desktop.in.in  mate-power-preferences.1  mate-power-preferences.desktop.in.in  mate-power-statistics.1  mate-power-statistics.desktop.in.in  meson.build  org.mate.power-manager.gschema.xml  org.mate.power-manager.gschema.xml.in  org.mate.power-manager.manager.gresource.xml  org.mate.power-manager.preferences.gresource.xml  org.mate.power-manager.statistics.gresource.xml
data/icons/: Makefile.am  meson.build
help/: LINGUAS  Makefile.am  Makefile.in  mate-power-manager.pot  meson.build
help/C/: index.docbook  legal.xml  mate-power-manager.xml
help/af/: af.po
help/am/: am.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po
help/es_AR/: es_AR.po
help/es_CL/: es_CL.po
help/es_CO/: es_CO.po
help/es_ES/: es_ES.po
help/es_MX/: es_MX.po
help/es_PR/: es_PR.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fil/: fil.po
help/fr/: fr.po
help/fr_CA/: fr_CA.po
help/frp/: frp.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/ia/: ia.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/jv/: jv.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/kn/: kn.po
help/ko/: ko.po
help/ku/: ku.po
help/ku_IQ/: ku_IQ.po
help/ky/: ky.po
help/la/: la.po
help/lt/: lt.po
help/lv/: lv.po
help/mai/: mai.po
help/mate-clock/id/: id.po
help/mate-clock/ka/: ka.po
help/mate-clock/ko/: ko.po
help/mate-clock/ru/: ru.po
help/mg/: mg.po
help/mi/: mi.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/nso/: nso.po
help/oc/: oc.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/ta/: ta.po
help/te/: te.po
help/th/: th.po
help/tk/: tk.po
help/tr/: tr.po
help/ug/: ug.po
help/uk/: uk.po
help/ur/: ur.po
help/uz/: uz.po
help/vi/: vi.po
help/wa/: wa.po
help/xh/: xh.po
help/yo/: yo.po
help/zh-Hans/: zh-Hans.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
help/zu/: zu.po
policy/: Makefile.am  meson.build  org.mate.power.policy.in2
src/: Makefile.am  config.h.in  egg-array-float.c  egg-array-float.h  egg-color.c  egg-color.h  egg-console-kit.c  egg-console-kit.h  egg-discrete.c  egg-discrete.h  egg-idletime.c  egg-idletime.h  egg-precision.c  egg-precision.h  egg-test.c  egg-test.h  gpm-backlight-helper.c  gpm-backlight.c  gpm-backlight.h  gpm-brightness.c  gpm-brightness.h  gpm-button.c  gpm-button.h  gpm-common.c  gpm-common.h  gpm-control.c  gpm-control.h  gpm-dpms.c  gpm-dpms.h  gpm-engine.c  gpm-engine.h  gpm-graph-widget.c  gpm-graph-widget.h  gpm-icon-names.h  gpm-idle.c  gpm-idle.h  gpm-kbd-backlight.c  gpm-kbd-backlight.h  gpm-load.c  gpm-load.h  (+30 more)
(+1015 files in other folders)
