option('enable-tests', type : 'boolean', value : true, description : 'enable tests')
option('gnome-keyring', type : 'boolean', value : false, description : 'gnome-keyring support')
option('libsecret', type : 'boolean', value : true, description : 'libsecret enabled')
option('applets', type : 'boolean', value : true, description : 'applets enabled')
